# django-hydra

./: .buildpacks  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  Procfile  README.md  README.rst  circle.yml  config.rb  cookiecutter.json  dotcloud.yml  generic_django_conf.py  manage.py  nginx.conf  package-lock.json  package.json  postinstall  pull_remote_db.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sampleapp_379bf500241395d79e5b46ff7f3ebeca5c429e9b.diff  sampleapp_af0d5edcd490ca621c5bc29db6eca292e0f21a86.diff  setup-heroku.sh  start.sh  test.sh  test_46fa49b5612d78f1b371986c6d9b80254a6ee59c.diff  todo.txt  tsconfig.json  wercker.yml
{{cookiecutter.repo_name}}/: .babelrc  .cookiecutter.json  .coveragerc  .dir-locals.el  .dockerignore  .editorconfig  .env  .env.example  .envrc  .eslintrc  .eslintrc.js  .gitignore  .ignore  .isort.cfg  .pnp.js  .pre-commit-config.yaml  .prettierrc.json  .prospector.yml  .pylintrc  .stylelintignore  .stylelintrc  .yarnrc  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Pipfile  Procfile  README.md  app.json  build.sh  circle.yml  cypress.json  dev-server.js  docker-compose.yml  fly.toml  gunicorn.conf.py  heroku.yml  isort.cfg  jest.config.js  jsconfig.json  (+15 more)
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/.github/: dependabot.yml  pull_request_template.md
{{cookiecutter.repo_name}}/.github/PULL_REQUEST_TEMPLATE/: release.md
{{cookiecutter.repo_name}}/.github/workflows/: django_ci.yml
{{cookiecutter.repo_name}}/.husky/: pre-commit
{{cookiecutter.repo_name}}/.npm-packages-offline-cache/: async-2.3.0.tgz  babel-helper-explode-assignable-expression-6.22.0.tgz  babel-plugin-jest-hoist-18.0.0.tgz  babel-plugin-transform-class-constructor-call-6.22.0.tgz  babel-plugin-transform-es2015-modules-commonjs-6.24.0.tgz  babel-plugin-transform-exponentiation-operator-6.22.0.tgz  babel-preset-airbnb-2.2.3.tgz  babel-preset-es2015-without-strict-0.0.4.tgz  babel-preset-jest-18.0.0.tgz  babel-preset-stage-1-6.22.0.tgz  babel-preset-stage-3-6.22.0.tgz  browser-sync-2.18.8.tgz  browser-sync-client-2.4.5.tgz  bubleify-0.5.1.tgz  caniuse-db-1.0.30000649.tgz  engine.io-1.8.0.tgz  engine.io-parser-1.3.1.tgz  global-4.3.1.tgz  globule-1.1.0.tgz  hosted-git-info-2.4.1.tgz  interpret-1.0.2.tgz  is-number-like-1.0.7.tgz  istanbul-lib-hook-1.0.5.tgz  istanbul-lib-instrument-1.7.0.tgz  istanbul-reports-1.0.2.tgz  jest-cli-18.1.0.tgz  jest-config-18.1.0.tgz  jest-environment-node-18.1.0.tgz  jest-jasmine2-18.1.0.tgz  jest-runtime-18.1.0.tgz  jest-snapshot-18.1.0.tgz  jest-util-18.1.0.tgz  jquery-3.2.1.tgz  magic-string-0.14.0.tgz  postcss-5.2.16.tgz  postcss-loader-0.9.1.tgz  pretty-format-18.1.0.tgz  query-string-4.3.2.tgz  raf-3.2.0.tgz  react-class-2.0.0.tgz  (+7 more)
{{cookiecutter.repo_name}}/config/: nginx.conf  paths.js  webpack.base.js  webpack.dev.js  webpack.prod.js
{{cookiecutter.repo_name}}/config/.npm-packages-offline-cache/: babel-helper-builder-binary-assignment-operator-visitor-6.22.0.tgz  babel-plugin-transform-es2015-modules-amd-6.24.0.tgz  babel-preset-es2015-6.24.0.tgz  babel-preset-stage-2-6.22.0.tgz  browser-sync-webpack-plugin-1.1.4.tgz  jest-changed-files-17.0.2.tgz  jest-mock-18.0.0.tgz  jest-resolve-18.1.0.tgz  jest-resolve-dependencies-18.1.0.tgz  math-expression-evaluator-1.2.16.tgz  mime-1.2.4.tgz  react-date-picker-5.3.28.tgz  react-script-loader-0.0.1.tgz  socket.io-client-1.6.0.tgz
{{cookiecutter.repo_name}}/frontend/css/: app-base.css  app-components.css  app-utilities.css  app.scss  base.scss  colors.scss  tailwind.css  tailwind.js
{{cookiecutter.repo_name}}/frontend/fontawesome/: fontawesome.js  fontawesome.ts
{{cookiecutter.repo_name}}/frontend/js/: global.d.ts  htmx.d.ts  index.d.ts  main.ts  nanomorph.d.ts  system.ts  util.ts
{{cookiecutter.repo_name}}/image/: python.sh
{{cookiecutter.repo_name}}/image/config/: django.conf  nextjs.conf  nginx.conf  webapp.conf
{{cookiecutter.repo_name}}/image/runit/: django  nextjs
{{cookiecutter.repo_name}}/npm-packages-offline-cache/: acorn-object-spread-1.0.0.tgz  babel-helper-bindify-decorators-6.22.0.tgz  babel-helper-explode-class-6.22.0.tgz  babel-helper-remap-async-to-generator-6.22.0.tgz  babel-jest-18.0.0.tgz  babel-plugin-transform-async-generator-functions-6.22.0.tgz  babel-plugin-transform-async-to-generator-6.22.0.tgz  babel-plugin-transform-class-properties-6.23.0.tgz  babel-plugin-transform-decorators-6.22.0.tgz  babel-plugin-transform-es2015-modules-umd-6.24.0.tgz  babel-preset-stage-0-6.22.0.tgz  browser-sync-ui-0.6.3.tgz  buble-0.12.5.tgz  caniuse-api-1.5.3.tgz  connect-1.9.2.tgz  electron-to-chromium-1.3.2.tgz  engine.io-client-1.8.0.tgz  enzyme-2.8.0.tgz  espree-3.4.1.tgz  express-2.5.11.tgz  function.prototype.name-1.0.0.tgz  ignore-3.2.6.tgz  immutable-3.8.1.tgz  istanbul-api-1.1.7.tgz  istanbul-lib-coverage-1.0.2.tgz  istanbul-lib-report-1.0.0.tgz  istanbul-lib-source-maps-1.1.1.tgz  jest-18.1.0.tgz  jest-diff-18.1.0.tgz  jest-environment-jsdom-18.1.0.tgz  jest-file-exists-17.0.0.tgz  jest-haste-map-18.1.0.tgz  jest-matcher-utils-18.1.0.tgz  jest-matchers-18.1.0.tgz  limiter-1.1.0.tgz  localtunnel-1.8.2.tgz  lodash-4.16.6.tgz  nan-2.6.0.tgz  node-gyp-3.6.0.tgz  normalize.css-4.2.0.tgz  (+20 more)
{{cookiecutter.repo_name}}/redis/: fly.toml
{{cookiecutter.repo_name}}/scripts/: create_bucket.py  create_new_project.sh  create_patch.sh  format_py.sh  get-env-secrets.sh  install_js_requirements.sh  install_python_requirements.sh  launch_fly.sh  pull_remote_db.sh  restart-postgres-dev-docker.sh  setup-heroku.sh  setup_database.sh  setup_existing_project.py  setup_existing_project.sh  setup_github.sh  setup_js.sh  start.sh  validate.sh  validate_js.sh
{{cookiecutter.repo_name}}/src/: constants.js  next.config.js
{{cookiecutter.repo_name}}/src/components/: AccountPageHeader.jsx  Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  Loading.jsx  (+3 more)
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: .prospector.yaml  __init__.py  conftest.py  pattern_contexts.py  test_app.py  tests.py
(+738 files in other folders)
