[tool.poetry]
name = "django-hydra"
version = "3.0"
description = "A generic project template for django"
authors = ["Ben Beecher <ben@lightmatter.com>"]

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
retrocookie = "^0.4.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.4.4"
furo = "^2024.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
